RESOLVED FIXED93946
[BlackBerry] LayerAnimation is not immutable, which makes dereferencing an expensive operation
https://bugs.webkit.org/show_bug.cgi?id=93946
Summary [BlackBerry] LayerAnimation is not immutable, which makes dereferencing an ex...
Arvid Nilsson
Reported 2012-08-14 01:58:23 PDT
Creating a new bug for the blackberry-specific bits of bug #86483
Attachments
Patch (8.23 KB, patch)
2012-08-14 02:03 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-08-14 02:03:53 PDT
Arvid Nilsson
Comment 2 2012-08-14 02:06:46 PDT
I'm cleaning up the patch to only contain BlackBerry-specific bits, on Ed's behalf. It's very important to get this upstream to avoid merge conflicts in Source/WebCore/platform/graphics/blackberry.
Arvid Nilsson
Comment 3 2012-08-14 02:16:04 PDT
CC Konrad for possible rebase impact. Make sure master_39 has this change.
WebKit Review Bot
Comment 4 2012-08-14 05:39:33 PDT
Comment on attachment 158262 [details] Patch Clearing flags on attachment: 158262 Committed r125552: <http://trac.webkit.org/changeset/125552>
WebKit Review Bot
Comment 5 2012-08-14 05:39:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.