[BlackBerry] LayerAnimation is not immutable, which makes dereferencing an expensive operation https://bugs.webkit.org/show_bug.cgi?id=93946

Patch by Ed Baker <edbaker@rim.com> on 2012-08-14
Reviewed by Antonio Gomes.

Make LayerAnimation immutable so it can be dereferenced from the main
WebKit thread without having to dispatch to the compositing thread,
which is an expensive operation.

TransformOperation and TimingFunction need to be made thread safe as
they are referenced in LayerAnimation, but that effort is being tracked
by a separate bug, #86483.

Reviewed internally by Arvid Nilsson.

No change in behavior, no new tests.

* platform/graphics/blackberry/LayerAnimation.h:
(WebCore::LayerAnimation::name):
(LayerAnimation):
(WebCore::LayerAnimation::LayerAnimation):
(WebCore::LayerAnimation::setName):
* platform/graphics/blackberry/LayerCompositingThread.cpp:
(WebCore):
* platform/graphics/blackberry/LayerCompositingThread.h:
(LayerCompositingThread):
* platform/graphics/blackberry/LayerWebKitThread.cpp:
(WebCore::LayerWebKitThread::~LayerWebKitThread):

Canonical link: https://commits.webkit.org/111820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125552 268f45cc-cd09-0410-ab3c-d52691b4dbfc